Refactor `WebConfig` to use `HttpMessageConverters.ServerBuilder`, replace `org.springframework.lang` with `org.jspecify.annotations`, improve nullability and type safety, and update Docker build command for layered JAR extraction.